<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rr1_gazebo</name>
  <version>0.0.0</version>
  <description>ROS2 package for desktop robotic arm RR1 containing Gazebo simulations.</description>
  <maintainer email="chudyja1@fit.cvut.cz">envilon</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Execution dependencies -->
  <exec_depend>rr1_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>